fixed reading csv, now issue with barchart

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
 
     <script type="text/javascript" src="d3/d3.js"></script>
-    <script type="text/javascript" src="d3/d3-selection-multi.js"></script>
+    <!-- <script type="text/javascript" src="d3/d3-selection-multi.js"></script> -->
     <title>Nutritional choices and online buying behavior</title>
 </head>
 
@@ -54,7 +54,9 @@
     <div class="w3-container" id="home">
         <div class="w3-row-padding">
             <div class="w3-col l2">
-                test persone
+                test persone<br>
+                <div id="persone">
+                </div>
             </div>
             <div class="w3-col l7">
                 main cha
