--- a/home.html
+++ b/home.html
@@ -52,13 +52,12 @@
     <!-- PROJECT -->
     <h3 class="w3-center w3-teal" style="padding:50px">PROJECT</h3>
     <div class="w3-container" id="home">
-        <div class="w3-row-padding">
-            <div class="w3-col l2">
-                test persone<br>
-                <div id="persone">
-                </div>
+        <div class="w3-row-padding" style = "padding: 0">
+            <div class="w3-col l3" style="padding: 0">
+                Partecipanti<br>
+                <div id="hBarchart"></div> <!-- BONUS DA FARE: Responsività delle barre che si adattano alla pagina -->
             </div>
-            <div class="w3-col l7">
+            <div class="w3-col l6">
                 main cha
             </div>
             <div class="w3-col l3">
@@ -76,7 +75,7 @@
     <!-- ABOUT US -->
     <h3 class="w3-center w3-teal" style="padding: 50px">ABOUT US</h3>
     <div class="w3-container" style="padding: 20px 16px" id="about">
-        
+
         <div class="w3-row-padding">
             <div class="w3-col l3 m6"><br></div> <!-- empty column -->
             <div class="w3-col l3 m6 w3-margin-bottom">
@@ -88,7 +87,8 @@
                         <hr>
                         <p><i class="fa fa-id-card-alt w3-padding"></i>3982992</p>
                         <p><i class="fa fa-envelope w3-padding"></i>gabriele.guo@gmail.com</p>
-                        <p><i class=" fab fa-linkedin w3-padding"></i><a href="https://www.linkedin.com/in/gabrieleguo/" target="_blank">Gabriele Guo</a></p>
+                        <p><i class=" fab fa-linkedin w3-padding"></i><a href="https://www.linkedin.com/in/gabrieleguo/"
+                                target="_blank">Gabriele Guo</a></p>
                     </div>
                 </div>
             </div>
