added scatterplot need fix tho

--- a/home.html
+++ b/home.html
@@ -58,10 +58,17 @@
                 <div id="hBarchart"></div> <!-- BONUS DA FARE: Responsività delle barre che si adattano alla pagina -->
             </div>
             <div class="w3-col l6">
-                main cha
+                Main Chart<br>
+                <div id="scatterplot"></div>
             </div>
             <div class="w3-col l3">
-                product info
+                Product info<br>
+                <div id="info">
+                    <span id="name"></span>
+                    <span id="score"></span>
+                    <span id="pricekgl"></span>
+            
+                </div>
             </div>
         </div>
 
