--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
     <!-- PROJECT -->
     <h3 class="w3-center w3-teal" style="padding:50px">PROJECT</h3>
     <div class="w3-container" id="home">
-        <div class="w3-row-padding" style = "padding: 0">
+        <div class="w3-row-padding" style="padding: 0">
             <div class="w3-col l3" style="padding: 0">
                 Partecipanti<br>
                 <div id="hBarchart"></div> <!-- BONUS DA FARE: Responsività delle barre che si adattano alla pagina -->
@@ -64,10 +64,47 @@
             <div class="w3-col l3">
                 Product info<br>
                 <div id="info">
-                    <span id="name"></span>
-                    <span id="score"></span>
-                    <span id="pricekgl"></span>
-            
+                    <div>
+                        <h4>Product name</h4> <span id="name"></span> <!-- CAMBIARE FORMATTAZIONE PER IL NOME -->
+                    </div>
+                    <span class="w3-col l9">
+
+                        <div class="subtitleprod">Score</div>
+
+                        <div class="subtitleprod">Price (€/Kg €/L)</div>
+
+                        <div class="subtitleprod">Energy</div>
+
+                        <div class="subtitleprod">Protein</div>
+
+                        <div class="subtitleprod">Carbohydrates (glucidi)</div>
+
+                        <div class="subtitleprod">of which sugars</div>
+
+                        <div class="subtitleprod">Fat</div>
+
+                        <div class="subtitleprod">of which satures</div>
+
+                        <div class="subtitleprod">Fibers</div>
+
+                        <div class="subtitleprod">Salt</div>
+
+
+                    </span>
+                    <span class="w3-col l3">
+                        <div id="score" class="subtitleprod"></div>
+                        <div id="pricekgl" class="subtitleprod"></div>
+                        <div id="energy" class="subtitleprod"></div>
+                        <div id="protein" class="subtitleprod"></div>
+                        <div id="glucides" class="subtitleprod"></div>
+                        <div id="sucres" class="subtitleprod" ></div>
+                        <div id="lipides" class="subtitleprod" ></div>
+                        <div id="ags" class="subtitleprod"></div>
+                        <div id="fibers" class="subtitleprod"></div>
+                        <div id="salt" class="subtitleprod"></div>
+
+                    </span>
+
                 </div>
             </div>
         </div>
